--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -38,4 +38,10 @@ title: Le Wagon - Middleman
   </div>
   <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
   <a class="card-link" href="#" ></a>
+  <div class="container">
+    <div class="row">
+
+
+    </div>
+  </div>
 </div>
