--- a/source/stylesheets/components/_team.scss
+++ b/source/stylesheets/components/_team.scss
@@ -1,18 +1,39 @@
-#about {
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    text-align: center;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(50%, #fff), color-stop(50%, #F4F4F4));
-    background-image: linear-gradient(0deg, #fff 50%, #F4F4F4 50%);
+.image-100 {
+    width: 150px;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
 }
 
-div {
-    display: block;
+#team {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  background-image: linear-gradient(0deg, white 50%, #F4F4F4 50%);
+  img {
+    width: 150px;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+  }
+  h1 {
+    font-size: 30px;
+    font-weight: bolder;
+    margin-bottom: 30px;
+    margin-top: 0px;
+    color: rgba(0,0,0,0.7);
+  }
+  h2 {
+    font-size: 17px;
+    font-weight: bold;
+    color: rgba(0,0,0,0.6);
+  }
+  a {
+    color: rgba(0,0,0,0.25);
+    font-weight: bold;
+    letter-spacing: -0.5px;
+    font-size: 15px;
+  }
+  .fa-heart {
+    color: #D23333;
+  }
 }
+
